fix(task-4): 修复共享附魔状态并发访问